--- a/cooperate/list_5_1.html
+++ b/cooperate/list_5_1.html
@@ -74,11 +74,19 @@
 </div>
 <div id="footer">
 	<div class="footer-container">
-        <p class="copy-right">蜀ICP备12345678号 技术支持：<a href="http://www.dedecms.com/" target="_blank">织梦模板</a>
+        <p class="copy-right">		
+		<a href="http://www.scljtz.com">四川励精科技有限公司</a>
+		<a href="http://www.ss-sss.com/" target="_blank">上海穗杉实业有限公司</a>
+		<a href="http://www.beianbeian.com/search/scljtz.com"  target="_blank">蜀ICP备12345678号</a> 
+		技术支持：<a href="http://www.dedecms.com/" target="_blank">织梦模板</a>
 		<br>
-		四川励精科技有限公司 版权所有 
+		地址：成都市高新区天府大道北段1480号1号楼A座B05附1-1  
+		电话：028-66070930 
+		邮箱：scljtz@163.com
+		
+		
 		</p>
-        <a class="fot-logo" href="http://127.0.0.1"><img src="/templets/mzip/images/logo_footer.gif" width="215" height="61" alt="四川励精科技有限公司" /></a>
+        
     </div>
 </div>
 </body>
