--- a/templets/mzip/footer.htm
+++ b/templets/mzip/footer.htm
@@ -3,10 +3,79 @@
 </div>
 <div id="footer">
 	<div class="footer-container">
-        <p class="copy-right">{dede:global.cfg_beian/} 技术支持：<a href="http://www.dedecms.com/" target="_blank">织梦模板</a>
+        <p class="copy-right">		
+		<a href="http://www.scljtz.com">四川励精科技有限公司</a>
+		<a href="http://www.ss-sss.com/" target="_blank">上海穗杉实业有限公司</a>
+		<a href="http://www.beianbeian.com/search/scljtz.com"  target="_blank">{dede:global.cfg_beian/}</a> 
+		技术支持：<a href="http://www.dedecms.com/" target="_blank">织梦模板</a>
 		<br>
-		四川励精科技有限公司 版权所有 
+		地址：成都市高新区天府大道北段1480号1号楼A座B05附1-1  
+		电话：028-66070930 
+		邮箱：scljtz@163.com
+		
+		
 		</p>
-        <a class="fot-logo" href="{dede:global.cfg_basehost/}"><img src="{dede:global.cfg_templets_skin/}/images/logo_footer.gif" width="215" height="61" alt="{dede:global.cfg_webname/}" /></a>
+        
     </div>
 </div>
+
+
+<div id="online_qq_layer">
+    <div id="online_qq_tab">
+        <a id="floatShow" style="display:block;" href="javascript:void(0);">收缩</a> 
+        <a id="floatHide" style="display:none;" href="javascript:void(0);">展开</a>
+    </div>
+  <div id="onlineService">
+    <dl class="top_a"></dl>
+    <dl class="top_b">
+    <ul>
+    <i style=" display:block; width:105px; height:51px; border-bottom:1px #cccccc solid; padding-top:6px;"><img src="{dede:global.cfg_templets_skin/}/images/hs.png" width="105" height="51" /></i>
+    <dl class="online_qq">
+    <li style=" background:url({dede:global.cfg_templets_skin/}/images/xs.png) no-repeat 4px 6px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=279822972&amp;site=qq&amp;menu=yes" style=" padding-left:0px !important;">销售网络</a></li>
+    <li style=" background:url({dede:global.cfg_templets_skin/}/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=279822972&amp;site=qq&amp;menu=yes">在线咨询1</a></li>
+      <li style=" background:url({dede:global.cfg_templets_skin/}/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=279822972&amp;site=qq&amp;menu=yes">在线咨询2</a></li>
+        <li style=" background:url({dede:global.cfg_templets_skin/}/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=279822972&amp;site=qq&amp;menu=yes">在线咨询3</a></li>
+
+    </dl>
+    </ul>
+    </dl>
+    <dl class="top_c"></dl>
+    <dl class="top_d"></dl>
+    <dl class="top_e">
+      <img src="{dede:global.cfg_templets_skin/}/images/ewm.jpg" width="108" height="107" style=" padding:3px 0px 2px 11px;"/>
+    </dl>
+    <dl class="top_f"></dl>
+
+  </div>
+</div>
+
+<script type="text/javascript" src="{dede:global.cfg_templets_skin/}/js/jquery.js"/></script>
+ <script type="text/javascript">
+$(document).ready(function(){
+
+	$("#floatShow").bind("click",function(){
+	
+		$("#onlineService").animate({width:"show", opacity:"show"}, "normal" ,function(){
+			$("#onlineService").show();
+		});
+		
+		$("#floatShow").attr("style","display:none");
+		$("#floatHide").attr("style","display:block");
+		
+		return false;
+	});
+	
+	$("#floatHide").bind("click",function(){
+	
+		$("#onlineService").animate({width:"hide", opacity:"hide"}, "normal" ,function(){
+			$("#onlineService").hide();
+		});
+		
+		$("#floatShow").attr("style","display:block");
+		$("#floatHide").attr("style","display:none");
+		
+		return false;
+	});
+  
+});
+</script>
