--- a/templets/mzip/index.htm
+++ b/templets/mzip/index.htm
@@ -29,8 +29,7 @@
             <p>设备根据客户实际情况定制</p>
         </li>
     </ul>
-    <div class="con-bot">
-    	
+    <div class="con-bot">    	
         <div class="con-bot-con">
 		{dede:type typeid='6'}
         	<h2><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_c_tit.png" width="176" height="36" alt="[field:typename/]" /></a><span><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_more.png" width="28" height="16" alt="更多" /></a></span></h2>{/dede:type}
@@ -42,22 +41,23 @@
         </div>		
 	</div>
 	
-	<div class="con-bot">
-		<div class="con-bot-left">
-		{dede:type typeid='7'}
-        	<h2><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_l_tit.png" width="130" height="36" alt="[field:typename/]" /></a><span><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_more.png" width="28" height="16" alt="更多" /></a></span></h2>
-            <dl>
-            	<dt><img src="[field:global.cfg_templets_skin/]/images/about.jpg" width="200" height="150" alt="关于我们" /></dt>
-                <dd><p><script src='[field:global.cfg_cmsurl/]/plus/mytag_js.php?aid=1' language='javascript'></script>... <a href="[field:typeurl/]">详细内容>></a></p></dd>
-            </dl>
-		{/dede:type}
-        </div>
-        <div class="con-bot-right">
-		{dede:type typeid='7'}
-        	<h2><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_r_tit.png" width="142" height="36" alt="[field:typename/]" /></a><span><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_more.png" width="28" height="16" alt="更多" /></a></span></h2>{/dede:type}
-            <p><script src='{dede:global.cfg_cmsurl/}/plus/mytag_js.php?aid=2' language='javascript'></script></p>
-        </div>
-    </div>
+	<!--工程案例 -->
+	<div class="con-bot">    	
+        <div class="con-bot-con">
+		{dede:type typeid='24'}
+        	<h2><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_g_tit.png" width="176" height="36" alt="[field:typename/]" /></a><span><a href="[field:typeurl/]"><img src="[field:global.cfg_templets_skin/]/images/con_bot_more.png" width="28" height="16" alt="更多" /></a></span></h2>{/dede:type}
+            <ul>
+			{dede:arclist typeid='24' row='4'}
+            	<li><a href="[field:arcurl/]" class="img"><img src="[field:litpic/]" width="200" height="150" alt="[field:title/]" /></a><a href="[field:arcurl/]">[field:title/]</a></li>
+			{/dede:arclist}
+            </ul>
+        </div>		
+	</div><!-- /.工程案例 -->
+	
+	
+	
+	
+	
     
 </div>
 {dede:include filename='footer.htm'/}
