增加行业新闻

--- a/cooperate/index.html
+++ b/cooperate/index.html
@@ -124,10 +124,10 @@
     <ul>
     <i style=" display:block; width:105px; height:51px; border-bottom:1px #cccccc solid; padding-top:6px;"><img src="/templets/mzip/images/hs.png" width="105" height="51" /></i>
     <dl class="online_qq">
-    <li style=" background:url(/templets/mzip/images/xs.png) no-repeat 4px 6px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2843555688&amp;site=qq&amp;menu=yes" style=" padding-left:0px !important;">销售网络</a></li>
-    <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2843555688&amp;site=qq&amp;menu=yes">在线咨询1</a></li>
-      <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2843555688&amp;site=qq&amp;menu=yes">在线咨询2</a></li>
-        <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2843555688&amp;site=qq&amp;menu=yes">在线咨询3</a></li>
+    <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=1464410669&amp;site=qq&amp;menu=yes" style=" padding-left:0px !important;">销售咨询</a></li>
+    <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=421141750&amp;site=qq&amp;menu=yes">销售咨询</a></li>
+      <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=692320235&amp;site=qq&amp;menu=yes">技术咨询</a></li>
+        <li style=" background:url(/templets/mzip/images/qq.png) no-repeat 6px 8px; display:block;"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=692320235&amp;site=qq&amp;menu=yes">技术服务</a></li>
 
     </dl>
     </ul>
