--- a/templets/mzip/index.htm
+++ b/templets/mzip/index.htm
@@ -12,21 +12,21 @@
 {dede:include filename='head.htm'/}
 <div id="content">
 	<ul class="con-top">
-    	<li>
-        	<h3><a href="/a/OEMjiagong/"><img src="{dede:global.cfg_templets_skin/}/images/con_top_01.png" width="93" height="24" alt="OEM加工" /></a></h3>
-            <p>适用于家庭，小型办公场所（面积100㎡以下）</p>
+    	<li style="background: url({dede:global.cfg_templets_skin/}/images/1.png) no-repeat top;">
+        	<h3><a href="/a/OEMjiagong/"></a></h3>
+            <p></p>
         </li>
-        <li>
-        	<h3><a href="#"><img src="{dede:global.cfg_templets_skin/}/images/con_top_02.png" width="93" height="24" alt="公司优势" /></a></h3>
-            <p>适用于中型办公场所及人员集中区域（面积100㎡～200㎡）</p>
+        <li style="background: url({dede:global.cfg_templets_skin/}/images/2.png) no-repeat top;">
+        	<h3><a href="#"></a></h3>
+            <p></p>
         </li>
-        <li>
-        	<h3><a href="#"><img src="{dede:global.cfg_templets_skin/}/images/con_top_03.png" width="93" height="24" alt="品牌展示" /></a></h3>
-            <p>适用于大规模人员集中区域，如写字楼，办公大楼，学校等集中供气区域（面积200㎡以上）</p>
+        <li style="background: url({dede:global.cfg_templets_skin/}/images/3.png) no-repeat top;">
+        	<h3><a href="#"></a></h3>
+            <p></p>
         </li>
-        <li>
-        	<h3><a href="#"><img src="{dede:global.cfg_templets_skin/}/images/con_top_04.png" width="107" height="24" alt="招商加盟" /></a></h3>
-            <p>设备根据客户实际情况定制</p>
+        <li style="background: url({dede:global.cfg_templets_skin/}/images/4.png) no-repeat top;">
+        	<h3><a href="#"></a></h3>
+            <p></p>
         </li>
     </ul>
     <div class="con-bot">    	
