--- a/a/chanpintedian/list_25_1.html
+++ b/a/chanpintedian/list_25_1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>加盟合作_四川励精科技有限公司</title>
+<title>产品特点_四川励精科技有限公司</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="/templets/mzip/css/style.css"/>
@@ -40,7 +40,7 @@
 	<img src="/templets/mzip/images/banner.png" width="980" height="384" alt="四川励精科技有限公司" />
 </div>
 <div id="list">
-  <div class="list-side">
+	<div class="list-side">
       <h3>产品展示</h3>
       <!--ul class="list-side-nav">
       
@@ -76,22 +76,19 @@
 		</p>
       </div>
     <span class="bot"></span></div>
-  <div class="list-con">
-    <div class="map"> <span class="map-l"></span><span class="map-r"></span>
-      <h2>加盟合作</h2>
-      <span class="map-c">您现在所在的位置：<a href='http://127.0.0.1/'>首页</a> > <a href='/cooperate/'>加盟合作</a></div></span>
-    <div class="view-box">
-      <h1>加盟合作</h1>
-      <div class="art-info">来源：四川励精科技有限公司</div>
-      <div class="content">四川省奥福森科技有限公司 &nbsp; &nbsp;<br />
-<br />
-西安睽源节能科技公司 &nbsp;<br />
-<br />
-成都小众机械有限公司 &nbsp;<br />
-<br />
-上海奕材科技有限公司</div>
+    <div class="list-con">
+    	<div class="map">
+        	<span class="map-l"></span><span class="map-r"></span>
+        	<h2>产品特点</h2>
+            <span class="map-c">您现在所在的位置：<a href='http://127.0.0.1/'>首页</a> > <a href='/a/chanpintedian/'>产品特点</a> > </span>
+        </div>
+        <ul class="list">
+		<li><a href="/a/chanpintedian/2016/0426/25.html">关注她们</a>16-04-26</li><li><a href="/a/chanpintedian/2016/0426/24.html">您的疑问</a>16-04-26</li><li><a href="/a/chanpintedian/2016/0426/23.html">99.9%极限洁净</a>16-04-26</li><li><a href="/a/chanpintedian/2016/0426/22.html">27%弥散供养</a>16-04-26</li>
+        </ul>
+        <ul class="page-list"><li><span class="pageinfo">共 <strong>1</strong>页<strong>4</strong>条记录</span></li>
+</ul>
+
     </div>
-  </div>
 </div>
 <div id="bot-nav">
     <a href="/">网站首页</a><span>|</span><a href="/about/">公司简介</a><span>|</span><a href="/products/">产品展示</a><span>|</span><a href="/manage/">解决方案</a><span>|</span><a href="/news/">行业新闻</a><span>|</span><a href="/cooperate/">加盟合作</a><span>|</span><a href="/user/">专利及检测报告</a><span>|</span><a href="/a/gongchenganli/">工程案例</a><span>|</span><a href="/a/chanpintedian/">产品特点</a><span>|</span>
