数据库备份 4特点图片更新

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>四川励精科技有限公司</title>
-<meta name="description" content="" />
-<meta name="keywords" content="" />
+<meta name="description" content="四川励精科技有限公司的网站  膜法富氧新风系统" />
+<meta name="keywords" content="环保 富氧" />
 <link rel="stylesheet" type="text/css" href="/templets/mzip/css/style.css"/>
 </head>
 
